--- a/style.css
+++ b/style.css
@@ -26,7 +26,8 @@ body {
   justify-content: center;
   align-items: center;
 
-  overflow: hidden;
+  overflow-x: hidden!important;
+  overflow-y: hidden!important;
 }
 
 a {
