--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
   width: 100vw;
   height: 100vh;
 
-  padding: 2rem;
+  padding: 1rem 2rem 2rem;
 
   background: #0c0f16;
 
@@ -26,7 +26,9 @@ body {
   justify-content: center;
   align-items: center;
 
-  overflow: hidden;
+  overflow-y: hidden!important;
+  overflow-x: hidden!important;
+
 }
 
 a {
@@ -113,6 +115,10 @@ a {
 
 .card button:hover {
   transform: translateY(-5px);
+}
+
+.particle {
+  overflow: hidden;
 }
 
 .particle span:nth-child(1){
@@ -329,6 +335,26 @@ a {
 }
 
 
+/*Responsivity*/
+
+@media (max-width: 767px) {
+ body {
+  
+  width: 100vw;
+  height: 100vh;
+
+  margin: 0 auto;
+
+  padding: 1rem 2rem 2rem;
+
+  background: #0c0f16;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  }
+}
 
 
 
