--- a/style.css
+++ b/style.css
@@ -1,390 +1,455 @@
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  overflow-x: hidden!important;
-  overflow-y: hidden!important;
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+	overflow-x: hidden !important;
+	overflow-y: hidden !important;
 }
 
 :root {
-  --ff-card: "Poppins", sans-serif;
-  --fc-card: #fff;
+	--ff-card: 'Poppins', sans-serif;
+	--fc-card: #fff;
 
-  font-size: 62.5%;
+	font-size: 62.5%;
 }
 
 body {
-  font-family: var(--ff-card);
+	font-family: var(--ff-card);
 
-  width: 100vw;
-  height: 100vh;
+	width: 100vw;
+	height: 100vh;
 
-  padding: 1rem 2rem 2rem;
+	padding: 1rem 2rem 2rem;
 
-  background: #0c0f16;
+	background: #0c0f16;
 
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 
-
-  overflow-x: hidden!important;
-  overflow-y: hidden!important;
+	overflow-x: hidden !important;
+	overflow-y: hidden !important;
 }
 
 a {
-  text-decoration: none;
+	text-decoration: none;
 }
 
 .card {
-  max-width: 40rem;
-  padding: 3rem 3.0rem ;
+	min-width: 30rem;
+	width: 40rem;
+	padding: 2rem 3rem;
 
-/*   background: #13161E;
+	/*   background: #13161E;
  */
 
-  background: rgba(19, 22, 30, 0.3);
-  backdrop-filter: blur(10px);
-  text-align: center;
+	background: rgba(56, 62, 73, 0.2);
+	backdrop-filter: blur(10px);
+	text-align: center;
 
-  box-shadow: 0px 0px 35px 0px rgba(0, 0, 0, 0.5);
-  border-radius: 10px;
+	box-shadow: 0px 0px 35px 0px rgba(0, 0, 0, 0.5);
+	border-radius: 10px;
 
-  animation: card-down 700ms ease-in;
+	animation: card-down 700ms ease-in;
 }
-
 
 .card img {
-  width: 15rem;
-  
-  padding: 5px;
+	width: 15rem;
 
-  border-radius: 50%;
-  border: solid 4px #5DC21E;
+	padding: 5px;
 
-  margin-bottom: 1.5rem;
+	border-radius: 50%;
+	border: solid 4px #5dc21e;
 
-
+	margin-bottom: 1.5rem;
 }
 
-.card h1, p {
-  color: var(--fc-card);
+.card h1,
+p {
+	color: var(--fc-card);
 }
 
 .card h1 {
-  font: normal 700 2.5rem var(--ff-card);
-  line-height: 2.4rem;
-  margin-bottom: 1rem;
+	font: normal 700 2.5rem var(--ff-card);
+	line-height: 2.4rem;
+	margin-bottom: 1rem;
 }
 
 .card p {
-  font: normal 400 1.4rem var(--ff-card);
-  margin-bottom: 2rem;
+	font: normal 400 1.4rem var(--ff-card);
+	margin-bottom: 2rem;
 }
 
 .card i {
-  margin-right: 10px;
+	margin-right: 10px;
 }
 
 .fa-brands {
-  font-size: 2rem;
+	font-size: 2rem;
 }
 
 .content > p {
-  margin-top: 1rem;
-  text-align: center;
+	margin-top: 1rem;
+	text-align: center;
 
-  font: normal 400 1.2rem "Poppins", sans-serif;
-  animation: card-down 700ms ease-in;
+	font: normal 400 1.2rem 'Poppins', sans-serif;
+	animation: card-down 700ms ease-in;
 }
 
 .card button {
-  margin-bottom: 12px;
-  padding: 8px 15px;
-  border-radius: 8px;
-  border: none;
+	margin: 0 auto 1.2rem;
+	padding: 8px 15px;
+	border-radius: 8px;
+	border: none;
 
-  background: #5DC21E;
-  color: white;
-  font: normal 500 1.8rem var(--ff-card);
+	background: #5dc21e;
+	color: white;
+	font: normal 500 1.8rem var(--ff-card);
 
-  width: 90%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+	width: 90%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 
-  cursor: pointer;
-  transition: transform 0.5s;
+	cursor: pointer;
+	transition: transform 0.5s;
 }
 
 .card button:hover {
-  transform: translateY(-5px);
+	transform: translateY(-5px);
 }
 
 .particle {
-  overflow-x: hidden;
-  overflow-y: hidden;
+	overflow-x: hidden;
+	overflow-y: hidden;
 }
 
-.particle span:nth-child(1){
-  width: 50px;
-  height: 50px;
-  opacity: .2;
-  background: rgb(134,244,66);
-  background: radial-gradient(circle, rgba(134,244,66,1) 0%, rgba(93,194,30,1) 15%, rgba(19,22,30,0) 55%);
+.particle span:nth-child(1) {
+	width: 50px;
+	height: 50px;
+	opacity: 0.2;
+	background: rgb(134, 244, 66);
+	background: radial-gradient(
+		circle,
+		rgba(134, 244, 66, 1) 0%,
+		rgba(93, 194, 30, 1) 15%,
+		rgba(19, 22, 30, 0) 55%
+	);
 
-  position: absolute;
-  z-index: -1;
+	position: absolute;
+	z-index: -1;
 
-  top: 0;
-  right: 3%;
+	top: 0;
+	right: 3%;
 
-  animation: flash-lights-up 10000ms infinite ease-in-out;
+	animation: flash-lights-up 10000ms infinite ease-in-out;
 }
-.particle span:nth-child(2){
-  width: 75px;
-  height: 75px;
-  opacity: .3;
-  background: rgb(134,244,66);
-  background: radial-gradient(circle, rgba(134,244,66,1) 0%, rgba(93,194,30,1) 15%, rgba(19,22,30,0) 55%);
+.particle span:nth-child(2) {
+	width: 75px;
+	height: 75px;
+	opacity: 0.3;
+	background: rgb(134, 244, 66);
+	background: radial-gradient(
+		circle,
+		rgba(134, 244, 66, 1) 0%,
+		rgba(93, 194, 30, 1) 15%,
+		rgba(19, 22, 30, 0) 55%
+	);
 
-  position: absolute;
-  z-index: -1;
+	position: absolute;
+	z-index: -1;
 
-  top: 0;
-  left: 28%;
+	top: 0;
+	left: 28%;
 
-  animation: flash-lights-up 8000ms infinite ease-in-out;
+	animation: flash-lights-up 8000ms infinite ease-in-out;
 }
-.particle span:nth-child(3){
-  width: 50px;
-  height: 50px;
-  opacity: .2;
-  background: rgb(134,244,66);
-  background: radial-gradient(circle, rgba(134,244,66,1) 0%, rgba(93,194,30,1) 15%, rgba(19,22,30,0) 55%);
+.particle span:nth-child(3) {
+	width: 50px;
+	height: 50px;
+	opacity: 0.2;
+	background: rgb(134, 244, 66);
+	background: radial-gradient(
+		circle,
+		rgba(134, 244, 66, 1) 0%,
+		rgba(93, 194, 30, 1) 15%,
+		rgba(19, 22, 30, 0) 55%
+	);
 
-  position: absolute;
-  z-index: -1;
+	position: absolute;
+	z-index: -1;
 
-  top: 0;
-  right: 59%;
+	top: 0;
+	right: 59%;
 
-  animation: flash-lights-up 11000ms infinite ease-in;
+	animation: flash-lights-up 11000ms infinite ease-in;
 }
-.particle span:nth-child(4){
-  width: 50px;
-  height: 50px;
-  opacity: .2;
-  background: rgb(134,244,66);
-  background: radial-gradient(circle, rgba(134,244,66,1) 0%, rgba(93,194,30,1) 15%, rgba(19,22,30,0) 55%);
+.particle span:nth-child(4) {
+	width: 50px;
+	height: 50px;
+	opacity: 0.2;
+	background: rgb(134, 244, 66);
+	background: radial-gradient(
+		circle,
+		rgba(134, 244, 66, 1) 0%,
+		rgba(93, 194, 30, 1) 15%,
+		rgba(19, 22, 30, 0) 55%
+	);
 
-  position: absolute;
-  z-index: -1;
+	position: absolute;
+	z-index: -1;
 
-  top: 0;
-  right: 53%;
+	top: 0;
+	right: 53%;
 
-  animation: flash-lights-up 13000ms infinite ease-in-out;
+	animation: flash-lights-up 13000ms infinite ease-in-out;
 }
-.particle span:nth-child(5){
-  width: 75px;
-  height: 75px;
-  opacity: .1;
-  background: rgb(134,244,66);
-  background: radial-gradient(circle, rgba(134,244,66,1) 0%, rgba(93,194,30,1) 15%, rgba(19,22,30,0) 55%);
+.particle span:nth-child(5) {
+	width: 75px;
+	height: 75px;
+	opacity: 0.1;
+	background: rgb(134, 244, 66);
+	background: radial-gradient(
+		circle,
+		rgba(134, 244, 66, 1) 0%,
+		rgba(93, 194, 30, 1) 15%,
+		rgba(19, 22, 30, 0) 55%
+	);
 
-  position: absolute;
-  z-index: -1;
+	position: absolute;
+	z-index: -1;
 
-  top: 0;
-  left: 87%;
+	top: 0;
+	left: 87%;
 
-  animation: flash-lights-up 8500ms infinite ease-in-out;
+	animation: flash-lights-up 8500ms infinite ease-in-out;
 }
-.particle span:nth-child(6){
-  width: 75px;
-  height: 75px;
-  opacity: .2;
-  background: rgb(134,244,66);
-  background: radial-gradient(circle, rgba(134,244,66,1) 0%, rgba(93,194,30,1) 15%, rgba(19,22,30,0) 55%);
+.particle span:nth-child(6) {
+	width: 75px;
+	height: 75px;
+	opacity: 0.2;
+	background: rgb(134, 244, 66);
+	background: radial-gradient(
+		circle,
+		rgba(134, 244, 66, 1) 0%,
+		rgba(93, 194, 30, 1) 15%,
+		rgba(19, 22, 30, 0) 55%
+	);
 
-  position: absolute;
-  z-index: -1;
+	position: absolute;
+	z-index: -1;
 
-  top: 0;
-  left: 66%;
+	top: 0;
+	left: 66%;
 
-  animation: flash-lights-up 6000ms 800ms infinite ease-in-out;
+	animation: flash-lights-up 6000ms 800ms infinite ease-in-out;
 }
-.particle span:nth-child(7){
-  width: 75px;
-  height: 75px;
-  opacity: .1;
-  background: rgb(134,244,66);
-  background: radial-gradient(circle, rgba(134,244,66,1) 0%, rgba(93,194,30,1) 15%, rgba(19,22,30,0) 55%);
+.particle span:nth-child(7) {
+	width: 75px;
+	height: 75px;
+	opacity: 0.1;
+	background: rgb(134, 244, 66);
+	background: radial-gradient(
+		circle,
+		rgba(134, 244, 66, 1) 0%,
+		rgba(93, 194, 30, 1) 15%,
+		rgba(19, 22, 30, 0) 55%
+	);
 
-  position: absolute;
-  z-index: -1;
+	position: absolute;
+	z-index: -1;
 
-  top: 0;
-  left: 71%;
+	top: 0;
+	left: 71%;
 
-  animation: flash-lights-up 4000ms 400ms infinite ease-in-out;
+	animation: flash-lights-up 4000ms 400ms infinite ease-in-out;
 }
-.particle span:nth-child(8){
-  width: 75px;
-  height: 75px;
-  opacity: .1;
-  background: rgb(134,244,66);
-  background: radial-gradient(circle, rgba(134,244,66,1) 0%, rgba(93,194,30,1) 15%, rgba(19,22,30,0) 55%);
+.particle span:nth-child(8) {
+	width: 75px;
+	height: 75px;
+	opacity: 0.1;
+	background: rgb(134, 244, 66);
+	background: radial-gradient(
+		circle,
+		rgba(134, 244, 66, 1) 0%,
+		rgba(93, 194, 30, 1) 15%,
+		rgba(19, 22, 30, 0) 55%
+	);
 
-  position: absolute;
-  z-index: -1;
+	position: absolute;
+	z-index: -1;
 
-  top: 0;
-  left: 33%;
+	top: 0;
+	left: 33%;
 
-  animation: flash-lights-up 10000ms 200ms infinite ease-in-out;
+	animation: flash-lights-up 10000ms 200ms infinite ease-in-out;
 }
-.particle span:nth-child(9){
-  width: 50px;
-  height: 50px;
-  opacity: .2;
-  background: rgb(134,244,66);
-  background: radial-gradient(circle, rgba(134,244,66,1) 0%, rgba(93,194,30,1) 15%, rgba(19,22,30,0) 55%);
+.particle span:nth-child(9) {
+	width: 50px;
+	height: 50px;
+	opacity: 0.2;
+	background: rgb(134, 244, 66);
+	background: radial-gradient(
+		circle,
+		rgba(134, 244, 66, 1) 0%,
+		rgba(93, 194, 30, 1) 15%,
+		rgba(19, 22, 30, 0) 55%
+	);
 
-  position: absolute;
-  z-index: -1;
+	position: absolute;
+	z-index: -1;
 
-  top: 0;
-  left: 15%;
+	top: 0;
+	left: 15%;
 
-  animation: flash-lights-up 15000ms 300ms infinite ease-in-out;
+	animation: flash-lights-up 15000ms 300ms infinite ease-in-out;
 }
-.particle span:nth-child(10){
-  width: 75px;
-  height: 75px;
-  opacity: .1;
-  background: rgb(134,244,66);
-  background: radial-gradient(circle, rgba(134,244,66,1) 0%, rgba(93,194,30,1) 15%, rgba(19,22,30,0) 55%);
+.particle span:nth-child(10) {
+	width: 75px;
+	height: 75px;
+	opacity: 0.1;
+	background: rgb(134, 244, 66);
+	background: radial-gradient(
+		circle,
+		rgba(134, 244, 66, 1) 0%,
+		rgba(93, 194, 30, 1) 15%,
+		rgba(19, 22, 30, 0) 55%
+	);
 
-  position: absolute;
-  z-index: -1;
+	position: absolute;
+	z-index: -1;
 
-  top: 0;
-  right: 35%;
+	top: 0;
+	right: 35%;
 
-  animation: flash-lights-up 7000ms 500ms infinite ease-in-out;
+	animation: flash-lights-up 7000ms 500ms infinite ease-in-out;
 }
-.particle span:nth-child(11){
-  width: 75px;
-  height: 75px;
-  opacity: .1;
-  background: rgb(134,244,66);
-  background: radial-gradient(circle, rgba(134,244,66,1) 0%, rgba(93,194,30,1) 15%, rgba(19,22,30,0) 55%);
+.particle span:nth-child(11) {
+	width: 75px;
+	height: 75px;
+	opacity: 0.1;
+	background: rgb(134, 244, 66);
+	background: radial-gradient(
+		circle,
+		rgba(134, 244, 66, 1) 0%,
+		rgba(93, 194, 30, 1) 15%,
+		rgba(19, 22, 30, 0) 55%
+	);
 
-  position: absolute;
-  z-index: -1;
+	position: absolute;
+	z-index: -1;
 
-  top: 0;
-  right: 20%;
+	top: 0;
+	right: 20%;
 
-  animation: flash-lights-up 6000ms 200ms infinite ease-in-out;
+	animation: flash-lights-up 6000ms 200ms infinite ease-in-out;
 }
-.particle span:nth-child(12){
-  width: 75px;
-  height: 75px;
-  opacity: .3;
-  background: red;
-  position: absolute;
-  z-index: -1;
+.particle span:nth-child(12) {
+	width: 75px;
+	height: 75px;
+	opacity: 0.3;
+	background: red;
+	position: absolute;
+	z-index: -1;
 
-  top: 0;
-  right: 91%;
+	top: 0;
+	right: 91%;
 
-  background: rgb(134,244,66);
-  background: radial-gradient(circle, rgba(134,244,66,1) 0%, rgba(93,194,30,1) 15%, rgba(19,22,30,0) 55%);
+	background: rgb(134, 244, 66);
+	background: radial-gradient(
+		circle,
+		rgba(134, 244, 66, 1) 0%,
+		rgba(93, 194, 30, 1) 15%,
+		rgba(19, 22, 30, 0) 55%
+	);
 
-
-  animation: flash-lights-up 18000ms 100ms infinite ease-in-out;
+	animation: flash-lights-up 18000ms 100ms infinite ease-in-out;
 }
-.particle span:nth-child(13){
-  width: 75px;
-  height: 75px;
-  opacity: .1;
-  background: rgb(134,244,66);
-  background: radial-gradient(circle, rgba(134,244,66,1) 0%, rgba(93,194,30,1) 15%, rgba(19,22,30,0) 55%);
+.particle span:nth-child(13) {
+	width: 75px;
+	height: 75px;
+	opacity: 0.1;
+	background: rgb(134, 244, 66);
+	background: radial-gradient(
+		circle,
+		rgba(134, 244, 66, 1) 0%,
+		rgba(93, 194, 30, 1) 15%,
+		rgba(19, 22, 30, 0) 55%
+	);
 
-  position: absolute;
-  z-index: -1;
+	position: absolute;
+	z-index: -1;
 
-  top: 0;
-  left: 41%;
+	top: 0;
+	left: 41%;
 
-  animation: flash-lights-up 7000ms 100ms infinite ease-in-out;
+	animation: flash-lights-up 7000ms 100ms infinite ease-in-out;
 }
-.particle span:nth-child(14){
-  width: 75px;
-  height: 75px;
-  opacity: .1;
-  background: rgb(134,244,66);
-  background: radial-gradient(circle, rgba(134,244,66,1) 0%, rgba(93,194,30,1) 15%, rgba(19,22,30,0) 55%);
+.particle span:nth-child(14) {
+	width: 75px;
+	height: 75px;
+	opacity: 0.1;
+	background: rgb(134, 244, 66);
+	background: radial-gradient(
+		circle,
+		rgba(134, 244, 66, 1) 0%,
+		rgba(93, 194, 30, 1) 15%,
+		rgba(19, 22, 30, 0) 55%
+	);
 
-  position: absolute;
-  z-index: -1;
+	position: absolute;
+	z-index: -1;
 
-  top: 0;
-  left: 86%;
+	top: 0;
+	left: 86%;
 
-  animation: flash-lights-up 13000ms 100ms infinite ease-in-out;
+	animation: flash-lights-up 13000ms 100ms infinite ease-in-out;
 }
-
 
 /*Responsivity*/
-  @media (max-width: 750px){
-    :root {
-      overflow-x: hidden!important;
-      overflow-y: hidden!important;
-    }
-    
-    * {
-      overflow-x: hidden!important;
-      overflow-y: hidden!important;
-    }
+@media (max-width: 750px) {
+	:root {
+		overflow-x: hidden !important;
+		overflow-y: hidden !important;
+	}
 
-    body {
-      overflow-x: hidden!important;
-      overflow-y: hidden!important;
-    }
+	* {
+		overflow-x: hidden !important;
+		overflow-y: hidden !important;
+	}
 
-    .particle {
-      overflow-x: hidden!important;
-      overflow-y: hidden!important;
+	body {
+		overflow-x: hidden !important;
+		overflow-y: hidden !important;
+	}
+
+	.particle {
+		overflow-x: hidden !important;
+		overflow-y: hidden !important;
+	}
 }
-    
-  }
 
 /*Animations*/
 
 @keyframes flash-lights-up {
-  0% {
-    transform: translateY(-20rem) scale(1);
-  }
+	0% {
+		transform: translateY(-20rem) scale(1);
+	}
 
-  100% {
-    transform: translateY(100vh) scale(.7);
-  }
+	100% {
+		transform: translateY(100vh) scale(0.7);
+	}
 }
 
 @keyframes card-down {
-  0% {
-    opacity: 0;
-    transform: translateY(-25px);
-  }
+	0% {
+		opacity: 0;
+		transform: translateY(-25px);
+	}
 
-  100% {
-    opacity: 1;
-    transform: translateY(0);
-  }
+	100% {
+		opacity: 1;
+		transform: translateY(0);
+	}
 }
